# BimmiBuddy

./: README.md  pyproject.toml
backend/: Makefile  main.py  pyproject.toml
backend/controllers/: user_controller.py
backend/database/: __init__.py  db.py
backend/database/alembic/: env.py
backend/database/alembic/versions/: 7f894d40e419_test_user_model.py  df82501283d8_clerk_user_id_update.py
backend/database/models/: user_model.py
backend/services/: ai_services.py
docs/: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Planner.tsx
frontend/src/store/: layout.store.ts
