[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.3.1",
    "fastapi-clerk-auth>=0.0.9",
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "strands-agents-tools>=0.5.1",
    "strands-agents[anthropic]>=1.37.0",
    "svix>=1.92.2",
]
